--- a/Wheels4Meals/src/app/app.component.html
+++ b/Wheels4Meals/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- <app-sign-up></app-sign-up> -->
 <!-- <app-login></app-login> -->
-<app-customer></app-customer>
+<!-- <app-customer></app-customer> -->
 <!-- <app-restaurant-list></app-restaurant-list> -->
+<!-- <app-restaurant-list></app-restaurant-list> -->
+<router-outlet></router-outlet>
